Wed Jun 19 07:06:21 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rgengc_remember): check T_NONE and T_ZOMBIE
	  if RGENGC_CHECK_MODE > 0.

Wed Jun 19 07:02:19 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (RGENGC_CHECK_MODE): add new check mode `3'.
	  In this mode, show all references if there is
	  a miss-corrected object.

Wed Jun 19 06:31:08 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_stress_set): add special option of GC.stress.
	  `GC.stress=(flag)' accepts integer to control behavior of GC.
	  See code for details. Of course, this feature is only for MRI.

	  You can debug RGenGC (WB) using `GC.stress = 1'.
	  Using this option, do minor marking at all possible places.

	  GC::STRESS_MINOR_MARK = 1 and GC::STRESS_LAZY_SWEEP = 2
	  seem good to add.

Wed Jun 19 06:29:31 2013  Koichi Sasada  <ko1@atdot.net>

	* vm.c (kwmerge_i): add WB.

Wed Jun 19 06:26:49 2013  Koichi Sasada  <ko1@atdot.net>

	* hash.c: `st_update()' also has same issue of last fix.
	  write barriers at callback function are too early.
	  All write barriers are executed after `st_update()'

Wed Jun 19 04:33:22 2013  Koichi Sasada  <ko1@atdot.net>

	* variable.c (rb_const_set): fix WB miss.

	  WBs had located before creating reference between a klass
	  and constant value. It causes GC bug.

	    # pseudo code:
	    WB(klass, value); # WB and remember klass
	    st_insert(klass->const_table, const_id, value);

	  `st_insert()' can cause GC before inserting `value' and
	  forget `klass' from the remember set. After that, relationship
	  between `klass' and `value' are created with constant table.
	  Now, `value' can be young (shady) object and `klass' can be old
	  object, without remembering `klass' object.
	  At the next GC, old `klass' object will be skipped and
	  young (shady) `value' will be miss-collected. -> GC bug

	  Lesson: The place of a WB is important.

Tue Jun 18 22:01:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>
